# rust-s2

./: .gitignore  Cargo.toml  README.md  justfile
.github/: release.yml
.github/workflows/: ci.yaml  release.yml  tests.yml
src/: consts.rs  lib.rs  r1.rs  r2.rs
src/r1/: interval.rs
src/r2/: mod.rs  point.rs  rect.rs
src/r3/: mod.rs  precisevector.rs  vector.rs
src/s1/: angle.rs  chordangle.rs  interval.rs  mod.rs
src/s2/: cap.rs  cell.rs  cellid.rs  cellunion.rs  crossing_edge_query.rs  edge_clipping.rs  edge_crosser.rs  edge_crossings.rs  edgeutil.rs  error.rs  latlng.rs  lax_loop.rs  loop.rs  metric.rs  mod.rs  padded_cell.rs  point.rs  polygon.rs  predicates.rs  random.rs  rect.rs  rect_bounder.rs  region.rs  shape.rs  shape_index.rs  shape_index_region.rs  stuv.rs  test_util.rs
