[package]
name = "s2"
edition = "2018"

version = "0.0.10"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]

license = "Apache-2.0"

description = "S2 geometric library"
homepage = "https://github.com/yjh0502/rust-s2"
repository = "https://github.com/yjh0502/rust-s2"
documentation = "https://docs.rs/rust-s2"

keywords = ["geo", "s2"]

[dependencies]
float_extras = "0.1.6"
lazy_static = "1.4.0"
rand = "0.8.5"
cgmath = "0.18.0"
libm = "0.2.6"
bigdecimal = "0.3.0"
serde = { version = "1.0.151", features = ["serde_derive"], optional = true }

[profile.release]
debug = 2

[target.'cfg(feature="serde")'.dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
