[package]
name = "s2"
edition = "2018"

version = "0.0.12"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]

license = "Apache-2.0"

description = "S2 geometric library"
homepage = "https://github.com/yjh0502/rust-s2"
repository = "https://github.com/yjh0502/rust-s2"
documentation = "https://docs.rs/rust-s2"

keywords = ["geo", "s2"]

[features]
default = ["serde", "float_extras"]
serde = ["dep:serde", "bigdecimal/serde"]

[dependencies]
float_extras = { version = "0.1.6", optional = true }
lazy_static = "1.4.0"
rand = { version = "0.8.5", optional = true }
cgmath = "0.18.0"
libm = "0.2.6"
bigdecimal = { version = "0.3.0", default_features = false }
serde = { version = "1.0.151", features = ["serde_derive"], optional = true }

[dev-dependencies]
rand = { version = "0.8.5" }
